[metadata]
name = beetl-competition
description = Code helper for BEETL competition
long_description = file: README.md
author = Sylvain Chevallier and Xiaoxi Wei
author-email = xiaoxi.wei18@imperial.ac.uk
license = MITBSD 3-clauses
home-page = https://beetl.ai/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved
    Operating System :: OS Independent
    Programming Language :: Python
keywords = BCI, EEG, Sleep, competition

[options]
packages = find:
install_requires =
    numpy>=1.17
    pandas>=0.25
    scipy>=1.3
    coloredlogs>=10.0
    scikit-learn>=0.23
    mne==0.23
    moabb>=0.4.2
    pooch>=1.3.0
    tdqm==0.0.1

[options.extras_require]
dev =
    pytest>=5.3
    black
    pre-commit

[flake8]
ignore = E203, E501, W503, B950
max-line-length = 90
max-complexity = 12
select = B, C, E, F, W, B9
